Stop popover going over screen max on mobile

--- a/quartz/components/styles/popover.scss
+++ b/quartz/components/styles/popover.scss
@@ -78,7 +78,7 @@
 
   @media all and ($mobile) {
     .popover-inner {
-      max-width: 100%;
+      max-width: 85vw;
       width: unset;
     }
   }
